--- a/.github/workflows/githubaction.yml
+++ b/.github/workflows/githubaction.yml
@@ -31,21 +31,24 @@ jobs:
       - name: Setup JDK
         uses: actions/setup-java@v4
         with:
-          distribution: 'temurin'
-          java-version: '17'
+          distribution: "temurin"
+          java-version: "17"
 
       - name: Build Spring Boot JAR
         working-directory: ./demo
-        run: mvn -B -DskipTests package
+        run: mvn -B clean package -DskipTests
 
-      # -------- DOCKER BUILD --------
+      # -------- DOCKER --------
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
+
+      - name: Install Docker Compose
+        run: sudo apt-get install docker-compose -y
 
       - name: Build Docker Images
         run: docker compose build
 
-      # If pushing to Docker Hub (optional)
+      # -------- PUSH TO DOCKER HUB (optional) --------
       # - name: Login to DockerHub
       #   uses: docker/login-action@v3
       #   with:
