--- a/.github/workflows/githubaction.yml
+++ b/.github/workflows/githubaction.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
-          node-version: 18
+          node-version: 20   # Vite requires Node 20.19+
 
       - name: Install Frontend Dependencies
         working-directory: ./frontend
