--- a/.github/workflows/githubaction.yml
+++ b/.github/workflows/githubaction.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
-          node-version: 20   # Vite requires Node 20.19+
+          node-version: 20   # FIXED (required for Vite)
 
       - name: Install Frontend Dependencies
         working-directory: ./frontend
@@ -42,13 +42,10 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Install Docker Compose
-        run: sudo apt-get install docker-compose -y
-
       - name: Build Docker Images
         run: docker compose build
 
-      # -------- PUSH TO DOCKER HUB (optional) --------
+      # Optional Push
       # - name: Login to DockerHub
       #   uses: docker/login-action@v3
       #   with:
