--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,13 +1,16 @@
-FROM node:20-alpine
+# Stage 1: Build Vite app
+FROM node:20-alpine AS build
 
 WORKDIR /app
-
 COPY package*.json ./
 RUN npm install
-
 COPY . .
 
-EXPOSE 5173
+RUN npm run build
 
-# Enable host access for Vite inside Docker
-CMD ["npm", "run", "dev", "--", "--host", "0.0.0.0", "--port", "5173"]
+# Stage 2: Nginx
+FROM nginx:alpine
+COPY --from=build /app/dist /usr/share/nginx/html
+
+EXPOSE 80
+CMD ["nginx", "-g", "daemon off;"]
